--- a/gradle.properties
+++ b/gradle.properties
@@ -6,16 +6,17 @@
   libraryName = LinkedJSON
   libraryVersion = 1.0
   libraryDescription = Sean Leary's JSON-Java library (https://github.com/stleary/JSON-java) fork which using LinkedHashMap instead of HashMap for sorted keys order in objects
-  siteUrl = https://github.com/acuna-public/LinkedJSON
-  gitUrl = https://github.com/acuna-public/LinkedJSON.git
-  issuesUrl = https://github.com/acuna-public/LinkedJSON/issues
-  publishedGroupId = pro.acuna
+  siteUrl = https://github.com/acuna-public/JSON
+  gitUrl = https://github.com/acuna-public/JSON.git
+  issuesUrl = https://github.com/acuna-public/JSON/issues
+  publishedGroupId = ru.ointeractive
   artifactId = json
-  bintrayRepo = Maven
-  developerId = acuna-public
+  bintrayRepo = maven
+  developerId = ointeractive
   developerName = Anton Tikhomirov
-  developerEmail = acuna.public@gmail.com
+  developerEmail = admin@ointeractive.ru
   licenseName = General Public License, Version 3.0
   licenseUrl = https://www.gnu.org/licenses/gpl-3.0.txt
   libraryLicenses = GPL-3.0
   publicDownloadNumbers = false
+  overrideExists = false
